# yass

./: .clang-format  CMakeLists.txt
glfw++/: CMakeLists.txt
glfw++/include/: glfw.hpp
glfw++/src/: glfw.cpp
src/: copy_image.cpp  doom_fire.cpp  doom_fire_mt.cpp  double_buffer.cpp  fire.cpp  fire.hpp  glfw.cpp  glfw.hpp  main.cpp  timer.hpp
src/shaders/: shader.vert
